# ssz

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
example/: CMakeLists.txt  main.cpp
include/ssz/: ssz.hpp
tests/: CMakeLists.txt  test_ssz.cpp
